# nanapi

./: .gitignore  AGENTS.md  Dockerfile  WORD_FREQUENCY_ANALYSIS_GUIDE.md  edgedb.toml  pyproject.toml  renovate.json  rxconfig.py
.github/workflows/: ci.yml
dbschema/: ai.esdl  anilist.esdl  calendar.esdl  default.esdl  discord.esdl  poll.esdl  projection.esdl  quizz.esdl  reminder.esdl  role.esdl  user.esdl  waicolle.esdl
dbschema/migrations/: 00030-m1byjsf.edgeql  00031-m1dh5x4.edgeql  00031-m1rm5lw.edgeql  00032-m1hsv63.edgeql  00033-m12mcej.edgeql  00034-m1npz6j.edgeql  00035-m14vgkb.edgeql  00036-m17b6yj.edgeql  00037-m134daq.edgeql  00038-m1lbvqi.edgeql  00039-m1wxabd.edgeql  00040-m1fsljn.edgeql  00041-m1ip7lq.edgeql  00042-m1reu4x.edgeql  00043-m14yfi7.edgeql  00044-m17a32z.edgeql  00045-m1n3mgd.edgeql  00046-m1iobqg.edgeql  00047-m1axeqq.edgeql  00048-m1fjqfw.edgeql  00049-m1m66kk.edgeql
nanapi/: __main__.py  example.local_settings.py  fastapi.py  settings.py
nanapi/database/ai/: prompt_delete.edgeql  prompt_delete.py  prompt_insert.edgeql  prompt_insert.py  prompt_select_by_name.edgeql  prompt_select_by_name.py  prompt_select_name_desc.edgeql  prompt_select_name_desc.py  skill_delete_by_id.edgeql  skill_delete_by_id.py  skill_insert.edgeql  skill_insert.py  skill_select_all.edgeql  skill_select_all.py
nanapi/database/amq/: account_merge.edgeql  account_merge.py  account_select.edgeql  account_select.py  settings_merge.py  settings_select_all.py
nanapi/database/anilist/: account_merge.edgeql  account_merge.py  account_replace_entries.edgeql  account_replace_entries.py  account_select_all.edgeql  account_select_all.py  anime_select_ids_upcoming.py  c_edge_merge_multiple.edgeql  c_edge_merge_multiple.py  c_edge_select_filter_chara.py  c_edge_select_filter_media.py  c_edge_select_filter_staff.py  chara_get_random.py  chara_merge_multiple.edgeql  chara_merge_multiple.py  chara_select.py  chara_select_all_ids.edgeql  chara_select_all_ids.py  chara_select_all_names.py  chara_select_birthday.edgeql  chara_select_birthday.py  chara_update.edgeql  chara_update.py  entry_select_all.edgeql  entry_select_all.py  entry_select_filter_media.edgeql  entry_select_filter_media.py  image_save.py  image_select.py  media_merge_combined_charas.edgeql  media_merge_combined_charas.py  media_merge_multiple.edgeql  media_merge_multiple.py  media_select.py  media_select_all_ids.edgeql  media_select_all_ids.py  media_select_all_titles.py  media_select_ids_by_season.py  media_select_ids_by_tag.edgeql  media_select_ids_by_tag.py  (+14 more)
nanapi/database/calendar/: guild_event_delete.edgeql  guild_event_delete.py  guild_event_merge.edgeql  guild_event_merge.py  guild_event_participant_add.edgeql  guild_event_participant_add.py  guild_event_participant_remove.edgeql  guild_event_participant_remove.py  guild_event_select.edgeql  guild_event_select.py  user_calendar_delete.edgeql  user_calendar_delete.py  user_calendar_merge.edgeql  user_calendar_merge.py  user_calendar_select.edgeql  user_calendar_select.py  user_calendar_select_all.py
nanapi/database/default/: client_get_by_username.py  client_insert.py
nanapi/database/discord/: message_batch_update_noindex.edgeql  message_batch_update_noindex.py  message_bulk_delete.edgeql  message_bulk_delete.py  message_bulk_insert.edgeql  message_bulk_insert.py  message_bulk_update_noindex.edgeql  message_bulk_update_noindex.py  message_index_channels_filter_no_page.edgeql  message_index_channels_filter_no_page.py  message_merge.edgeql  message_merge.py  message_select_filter_no_page.edgeql  message_select_filter_no_page.py  message_select_latest_timestamps.edgeql  message_select_latest_timestamps.py  message_update_noindex.edgeql  message_update_noindex.py  message_word_frequency.edgeql  message_word_frequency.py  page_delete.edgeql  page_delete.py  page_delete_empty.edgeql  page_delete_empty.py  page_insert.edgeql  page_insert.py  page_select_filter_updated_messages.edgeql  page_select_filter_updated_messages.py  page_select_last.edgeql  page_select_last.py  page_update.edgeql  page_update.py  rag_query.edgeql.bak  rag_query.py  reaction_bulk_delete_by_message_ids.edgeql  reaction_bulk_delete_by_message_ids.py  reaction_delete.edgeql  reaction_delete.py  reaction_insert.edgeql  reaction_insert.py
nanapi/database/histoire/: histoire_delete_by_id.py  histoire_get_by_id.py  histoire_insert.py  histoire_select_id_title.py
nanapi/database/poll/: poll_delete_by_message_id.edgeql  poll_delete_by_message_id.py  poll_get_by_message_id.edgeql  poll_get_by_message_id.py  poll_insert.edgeql  poll_insert.py  vote_delete.edgeql  vote_delete.py  vote_merge.edgeql  vote_merge.py
nanapi/database/pot/: pot_add.edgeql  pot_add.py  pot_get_by_user.edgeql  pot_get_by_user.py
nanapi/database/presence/: presence_delete_by_id.py  presence_insert.py  presence_select_all.py
nanapi/database/projection/: projo_add_event.edgeql  projo_add_event.py  projo_add_external_media.py  projo_add_media.py  projo_delete.py  projo_delete_upcoming_events.py  projo_insert.edgeql  projo_insert.py  projo_participant_add.edgeql  (+11 more)
nanapi/models/: ai.py  amq.py  anilist.py  calendar.py  client.py  discord.py  projection.py  quizz.py  reminder.py  role.py  user.py  waicolle.py  wrapped.py
nanapi/reflex/: __init__.py  app.py  state.py
nanapi/routers/: ai.py  amq.py  anilist.py  calendar.py  client.py  discord.py  histoire.py  pot.py  presence.py  projection.py  quizz.py  reminder.py  role.py  user.py  waicolle.py  wrapped.py
nanapi/tasks/: ai.py  anilist.py  discord.py  meilisearch.py  userlists.py
nanapi/utils/: anilist.py  calendar.py  clients.py  collages.py  fastapi.py  logs.py  misc.py  security.py  user_word_analysis.py  waicolle.py  word_frequency.py
notebooks/: finetuning.ipynb  finetuning_dataset.py  nanagpt.ipynb  pyproject.toml  rag.ipynb  settings.example.py
scripts/: analyze_user_words.py  analyze_word_frequency.py  check_database.py  demo_word_frequency.py  find_community_words.py  find_frequency_discrepancy.py  find_user_word_signatures.py  visualize_user_tsne.py
(+203 files in other folders)
