[project]
name = "nanapi"
version = "0.1.0"
description = "FastAPI + Gel backend for Nana-chan"
readme = "README.md"
license = "MIT"
authors = [
    { name = "NextFire", email = "git@yuru.moe" },
    { name = "odrling", email = "florianbadie@odrling.xyz" },
    { name = "Pierre Jeanjean", email = "rhiobet@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "gel==3.0.1",
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "aiohttp[speedups]==3.11.18",
    # https://github.com/PyYoshi/cChardet/issues/81
    "faust-cchardet==2.1.19",
    "orjson==3.10.16",
    "backoff==2.2.1",
    "meilisearch-python-sdk==4.5.0",
    "numpy==2.2.5",
    "pillow==10.4.0",
    "rich==14.0.0",
    "discord-webhook[async]==1.4.1",
    "python-multipart==0.0.20",
    "passlib[bcrypt]==1.7.4",
    "cachetools==5.5.2",
    "asyncache==0.3.1",
    "hypercorn==0.17.3",
    "tzdata==2025.2",
    "pyjwt==2.10.1",
    "ics==0.7.2",
    "yarl==1.20.0",
    "starlette==0.46.2",
]

[dependency-groups]
dev = [
    "pyright==1.1.399",
    "ruff==0.11.6",
    "uvicorn==0.34.2",
    "gel-pydantic-codegen==1.0.1",
    "pyinstrument==5.0.1",
    "fawltydeps==0.19.0",
]

[project.urls]
homepage = "https://github.com/Japan7/mahou.py"

[tool.pyright]
pythonVersion = "3.12"
reportDeprecated = true
ignore = ["nanapi/nanachan_v2_migrate.py"]

[tool.ruff]
line-length = 99
exclude = ["nanapi/nanachan_v2_migrate.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]
ignore = [
    # lambda expressions
    "E731",
    # ambiguous variable name
    "E741",
    # Do not perform function calls in argument defaults
    "B008",
    # Within an except clause, raise exceptions with `raise ... from err` or `raise ... from None`
    "B904",
    # `zip()` without an explicit `strict=` parameter
    "B905",
    # Use `contextlib.suppress(asyncio.CancelledError)` instead of try-except-pass
    "SIM105",
    # Use ternary operator `{contents}` instead of if-else-block
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"nanapi/database/*" = ["E501"]
"nanapi/*local_settings.py" = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.fawltydeps]
ignore_unused = [
    # cchardet is used by aiohttp
    "faust-cchardet",
    # tzdata provides timezones when the OS/distribution doesn’t
    "tzdata",
    # dev tools
    "gel-pydantic-codegen",
    "fawltydeps",
    "ruff",
    "pyright",
    # for vscode debug (hypercorn --reload is not working)
    "uvicorn",
    # we have 1st party utils modules with the same name
    # https://github.com/tweag/FawltyDeps/issues/419
    "fastapi",
    # fastapi needs it for multipart uploads
    "python-multipart",
]
output_format = "human_detailed"
