[project]
name = "nanapi"
version = "0.1.0"
description = "FastAPI + Gel backend for Nana-chan"
readme = "README.md"
license = "MIT"
authors = [
    { name = "NextFire", email = "git@yuru.moe" },
    { name = "odrling", email = "florianbadie@odrling.xyz" },
    { name = "Pierre Jeanjean", email = "rhiobet@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "gel==3.1.0",
    "fastapi==0.120.1",
    "pydantic==2.12.3",
    "aiohttp[speedups]==3.13.1",
    # https://github.com/PyYoshi/cChardet/issues/81
    "faust-cchardet==2.1.19",
    "orjson==3.11.4",
    "backoff==2.2.1",
    "meilisearch-python-sdk==5.2.0",
    "numpy==2.3.4",
    "pillow==12.0.0",
    "rich==14.2.0",
    "discord-webhook[async]==1.4.1",
    "python-multipart==0.0.20",
    "bcrypt==5.0.0",
    "cachetools==5.5.2",
    "asyncache==0.3.1",
    "hypercorn==0.17.3",
    "tzdata==2025.2",
    "pyjwt==2.10.1",
    "ics==0.7.2",
    "yarl==1.22.0",
    "starlette==0.49.1",
    "tiktoken==0.12.0",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "pyright==1.1.407",
    "ruff==0.14.2",
    "uvicorn==0.38.0",
    "gel-pydantic-codegen==1.1.0",
    "pyinstrument==5.1.1",
    "fawltydeps==0.20.0",
    "nanapi-notebooks",
]

[tool.uv.sources]
nanapi-notebooks = { workspace = true }

[tool.uv.workspace]
members = ["notebooks"]

[project.urls]
homepage = "https://github.com/Japan7/nanapi"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
ignore = ["nanapi/nanachan_v2_migrate.py", "notebooks"]

[tool.ruff]
line-length = 99
exclude = ["nanapi/nanachan_v2_migrate.py", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]
ignore = [
    # lambda expressions
    "E731",
    # ambiguous variable name
    "E741",
    # Do not perform function calls in argument defaults
    "B008",
    # Within an except clause, raise exceptions with `raise ... from err` or `raise ... from None`
    "B904",
    # `zip()` without an explicit `strict=` parameter
    "B905",
    # Use `contextlib.suppress(asyncio.CancelledError)` instead of try-except-pass
    "SIM105",
    # Use ternary operator `{contents}` instead of if-else-block
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"nanapi/database/*" = ["E501"]
"nanapi/*local_settings.py" = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.fawltydeps]
exclude = ["notebooks"]
ignore_unused = [
    # cchardet is used by aiohttp
    "faust-cchardet",
    # tzdata provides timezones when the OS/distribution doesn’t
    "tzdata",
    # dev tools
    "gel-pydantic-codegen",
    "fawltydeps",
    "ruff",
    "pyright",
    # for vscode debug (hypercorn --reload is not working)
    "uvicorn",
    # we have 1st party utils modules with the same name
    # https://github.com/tweag/FawltyDeps/issues/419
    "fastapi",
    # fastapi needs it for multipart uploads
    "python-multipart",
    "nanapi-notebooks",
]
output_format = "human_detailed"
